--- a/php.ini
+++ b/php.ini
@@ -5,3 +5,8 @@ smtp_port = 587
 
 ; For Win32 only.
 sendmail_from = hell0secupass@gmail.com
+extension=pdo_mysql
+extension=openssl
+extension=gmp
+extension=curl
+extension=sodium
